hphp/test/zend/bad/ext/phar/tests/zip/corrupt_003.php
<?php
try {
	new PharData(dirname(__FILE__) . '/files/filecomment.zip');
} catch (Exception $e) {
	echo $e->getMessage() . "\n";
}
?>
===DONE===